Compiler/tests/good/context4.nx
val x : int = 3;

printn(x);

if(1)
{
    printn(x);
    val x : int = 2;
    printn(x);

    foreach i in [0 .. 2]
    {
        printn(x);
        
        val x : int = 1;

        printn(x);
    }
    printn(x);
}

printn(x);

