Compiler/tests/bad/parser6.nx
val x : int = 3;



foreach print(x) in [0 .. 10]
{
    print(0);
}
